--- a/client/src/my/sheeponthetable/gui/SheepPanel.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
@@ -81,7 +81,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="807" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jXSheepMap" min="-2" pref="621" max="-2" attributes="0"/>
@@ -97,19 +97,19 @@
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabelFarm" max="32767" attributes="0"/>
+                                          <Component id="jLabelFarm" pref="230" max="32767" attributes="0"/>
                                           <Component id="jLabelLastUpdate" min="-2" pref="178" max="-2" attributes="0"/>
-                                          <Component id="jLabelUser" alignment="1" max="32767" attributes="0"/>
+                                          <Component id="jLabelUser" alignment="1" pref="230" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <Component id="jScrollPane2" alignment="1" max="32767" attributes="0"/>
-                                  <Component id="jLabel5" alignment="1" max="32767" attributes="0"/>
-                                  <Component id="jSeparator1" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane2" alignment="1" pref="326" max="32767" attributes="0"/>
+                                  <Component id="jLabel5" alignment="1" pref="326" max="32767" attributes="0"/>
+                                  <Component id="jSeparator1" alignment="0" pref="326" max="32767" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="addSheep" min="-2" pref="125" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="idLbl2" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="189" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -170,7 +170,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                               <Component id="editSheepBtn" min="-2" pref="122" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="89" max="32767" attributes="0"/>
                               <Component id="removeSheepBtn" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -185,7 +185,7 @@
                       <Component id="deSelect" min="-2" pref="125" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane1" max="32767" attributes="0"/>
-                  <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jLabel4" alignment="0" pref="258" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -251,7 +251,7 @@
                                               <Component id="sheepNicknameLabel" min="-2" pref="14" max="-2" attributes="0"/>
                                           </Group>
                                           <Group type="102" alignment="1" attributes="0">
-                                              <EmptySpace max="32767" attributes="0"/>
+                                              <EmptySpace pref="13" max="32767" attributes="0"/>
                                               <Group type="103" groupAlignment="3" attributes="0">
                                                   <Component id="txtNick" alignment="3" min="-2" max="-2" attributes="0"/>
                                                   <Component id="lblNick" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -273,7 +273,7 @@
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblDeadTxt" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="lblDeadTxt" alignment="1" pref="28" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="lblDead" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="txtDead" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -302,12 +302,12 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jScrollPane2" pref="230" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jScrollPane1" max="32767" attributes="0"/>
+                          <Component id="jScrollPane1" pref="796" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jXSheepMap" max="32767" attributes="0"/>
+                      <Component id="jXSheepMap" pref="825" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
