Added doubleclick handler on ChooseFarm

--- a/client/src/my/sheeponthetable/gui/ChooseFarm.form
+++ b/client/src/my/sheeponthetable/gui/ChooseFarm.form
@@ -87,6 +87,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="farmListMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
