--- a/client/src/my/sheeponthetable/gui/SheepPanel.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanel.form
@@ -158,7 +158,7 @@
                                                               <Component id="txtWeight" alignment="0" min="-2" pref="94" max="-2" attributes="0"/>
                                                               <Component id="txtBorn" min="-2" pref="94" max="-2" attributes="0"/>
                                                           </Group>
-                                                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                                                          <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                                                       </Group>
                                                   </Group>
                                               </Group>
@@ -247,11 +247,11 @@
                                       <Component id="lblTemp" min="-2" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" attributes="0">
-                                              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                                               <Component id="sheepNicknameLabel" min="-2" pref="14" max="-2" attributes="0"/>
                                           </Group>
                                           <Group type="102" alignment="1" attributes="0">
-                                              <EmptySpace pref="13" max="32767" attributes="0"/>
+                                              <EmptySpace type="separate" pref="21" max="32767" attributes="0"/>
                                               <Group type="103" groupAlignment="3" attributes="0">
                                                   <Component id="txtNick" alignment="3" min="-2" max="-2" attributes="0"/>
                                                   <Component id="lblNick" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -260,7 +260,7 @@
                                       </Group>
                                   </Group>
                               </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="lblBorn" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" attributes="0">
@@ -271,15 +271,15 @@
                                       <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblDeadTxt" alignment="1" pref="28" max="32767" attributes="0"/>
+                                  <Component id="lblDeadTxt" alignment="1" pref="58" max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="lblDead" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="txtDead" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="lblWeightTxt" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                                   <Component id="lblWeight" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -300,14 +300,14 @@
                                   </Group>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jScrollPane2" pref="230" max="32767" attributes="0"/>
+                              <Component id="jScrollPane2" pref="249" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jScrollPane1" pref="796" max="32767" attributes="0"/>
+                          <Component id="jScrollPane1" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jXSheepMap" pref="825" max="32767" attributes="0"/>
+                      <Component id="jXSheepMap" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
