--- a/client/src/my/sheeponthetable/gui/AddNewSheep.form
+++ b/client/src/my/sheeponthetable/gui/AddNewSheep.form
@@ -16,7 +16,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Register new Sheep"/>
-    <Property name="autoRequestFocus" type="boolean" value="false"/>
+    <Property name="alwaysOnTop" type="boolean" value="true"/>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[409, 305]"/>
     </Property>
@@ -113,7 +113,7 @@
                   <Component id="clearbtn" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="addSheepButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="28" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
