Sheep isAlive() returned wrong value
The sheep was dead, but it wasnt dead so now i fixed it - I think im
god!

--- a/client/src/my/sheeponthetable/gui/SheepPanel.form
+++ b/client/src/my/sheeponthetable/gui/SheepPanel.form
@@ -768,7 +768,7 @@
                 <Property name="text" type="java.lang.String" value="Save changes"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSheepEditSaveActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSheepEditSaveClicked"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnSheepEditCancel">
